# gridsync_dependency

./: README.md  pyproject.toml  pytest.ini
src/: main.py
test/: conftest.py  test_gridsync.py
